--- a/layouts/projects/list.html
+++ b/layouts/projects/list.html
@@ -3,7 +3,7 @@
 
 <section>
     <div class="tab-content">
-        <div class="content">
+        <div class="content common-layout">
             <div class="left">
                 <ul id="objects-group">
                     <li class="active">{{ .Params.name }}</li>
