--- a/layouts/observability/list.html
+++ b/layouts/observability/list.html
@@ -1,30 +1,30 @@
 {{ define "main" }}
 <section class='section-1'>
   {{ with .Params.section1}}
-  <img src="{{ .image }}" alt="">
+  <img class="top-cover-img" src="{{ .image }}" alt="">
   <div class="title-div">
-    <h1>{{ .title }}</h1>
-    <p>{{ .content }}</p>
+    <h1 class="title-h1">{{ .title }}</h1>
+    <p class="common-p">{{ .content }}</p>
   </div>
   {{ end }}
 </section>
 
 <section class="section-2">
   {{ with .Params.section2 }}
-  <div>
+  <div class="common-layout">
     <h2 class="title-black-h2">{{ .title }}</h2>
     <ul>
       {{ range .list }}
-      <li>
+      <li class="common-flex-layout">
         <div>
-          <h3>{{ .title }}</h3>
+          <h3 class="title-black-h3">{{ .title }}</h3>
           {{ if .summary }}
-          <p>{{ .summary }}</p>
+          <p class="common-p">{{ .summary }}</p>
           {{ end }}
           {{ if .contentList }}
           <ul>
             {{ range .contentList}}
-            <li>{{ .content | safeHTML }}</li>
+            <li class="common-li">{{ .content | safeHTML }}</li>
             {{ end }}
           </ul>
           {{ end }}
@@ -41,11 +41,11 @@
   {{ with .Params.section3 }}
   <img class="bg-left" src="{{ .bgLeft }}" alt="">
   <img class="bg-right" src="{{ .bgRight }}" alt="">
-  <div>
+  <div class="common-layout">
     <h2 class="title-black-h2">{{ .title }}</h2>
     <img src="{{ .image }}" alt="">
-    <p>{{ .content }}</p>
-    <a href="{{ .link }}"><button>{{ .btnContent }}</button></a>
+    <p class="common-p">{{ .content }}</p>
+    <a href="{{ .link }}"><button class="common-btn">{{ .btnContent }}</button></a>
   </div>
   {{ end }}
 </section>
