--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -419,10 +419,10 @@
           background-color: #e4edf6;
         }
 
-        a {
+        & > span {
           position: absolute;
           top: 71px;
-          right: 35px;
+          right: 30px;
         }
 
       }
