--- a/layouts/index.html
+++ b/layouts/index.html
@@ -102,7 +102,7 @@
           <p class="common-p">{{ .content | safeHTML }}</p>
         </div>
         <div class='middle-line'></div>
-        <a class="common-green-a" href="{{ .link }}">{{ i18n "Read More" }} →</a>
+        <span class="common-green-a">{{ i18n "Coming Soon" }}</span>
       </li>
       {{ end }}
     </ul>
@@ -168,7 +168,7 @@
     <div class='link-div'>
       <a class="common-black-a" href="{{ .link }}">{{ .linkContent }}</a>
     </div>
-    <a class='join-div' href="{{ .titleLink }}">
+    <a class='join-div' href="{{ .joinsLink }}">
       <p class='p1'>{{ .joinTitle }}</p>
       <p class='p2'>{{ .joinContent }}</p>
       <img src="/images/home/join-right.svg" alt="">
