--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -425,6 +425,12 @@
           right: 30px;
         }
 
+        & > a {
+          position: absolute;
+          top: 71px;
+          right: 35px;
+        }
+
       }
     }
   }
