--- a/layouts/index.html
+++ b/layouts/index.html
@@ -102,7 +102,11 @@
           <p class="common-p">{{ .content | safeHTML }}</p>
         </div>
         <div class='middle-line'></div>
+        {{ if .check }}
         <span class="common-green-a">{{ i18n "Coming Soon" }}</span>
+        {{ else }}
+        <a class="common-green-a" href="{{ .link }}" target="_blank">{{ i18n "Read More" }} →</a>
+        {{ end }}
       </li>
       {{ end }}
     </ul>
