--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -29,8 +29,6 @@
 
   & > div {
     position: relative;
-    width: 1160px;
-    margin: 0 auto;
     padding-top: 256px;
 
     & > div {
@@ -118,6 +116,46 @@
     }
 
   }
+  @media only screen and (max-width: $mobile-max-width) {
+    height: auto;
+    padding-top: 138px;
+
+    & > .img1, .img2, .img3 {
+      display: none;
+    }
+
+    & > div {
+      padding-top: 0px;
+
+      .img2, .img4 {
+        display: none;
+      }
+
+      h1 {
+        font-size: 28px;
+        line-height: 1.29;
+        letter-spacing: -0.08px;
+      }
+
+      h1, .p2 {
+        width: 100%;
+        height: auto;
+      }
+
+      button {
+        display: none;
+      }
+
+      .img1 {
+        position: relative;
+        top: 0;
+        left: 0;
+        display: block;
+        width: 80%;
+        margin: 40px auto;
+      }
+    }
+  }
 }
 
 .section-2 {
@@ -156,6 +194,27 @@
       }
     }
   }
+
+  @media only screen and (max-width: $mobile-max-width) {
+    height: auto;
+    background-image: none;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-top: 60px;
+    padding-bottom: 50px;
+    background-color: #ffffff;
+
+    & > div {
+      & > p {
+        width: 100%;
+        margin-bottom: 0;
+      }
+
+      & > ul > li {
+        height: auto;
+      }
+    }
+  }
 }
 
 .section-3 {
@@ -174,19 +233,15 @@
     & > div {
       position: relative;
       margin-top: 76px;
-      padding-left: 214px;
       text-align: left;
+      align-items: center;
 
       & > ul {
-        position: absolute;
         display: flex;
         justify-content: space-between;
         flex-direction: column;
-        top: 50%;
-        left: 0;
         width: 214px;
         height: 245px;
-        transform: translateY(-50%);
         border-left: solid 1px #ccd3db;
 
         & > li {
@@ -204,7 +259,7 @@
         }
 
         .active {
-          font-size: 30px;
+          font-size: 22px;
           color: #4ca986;
           border-left: 2px solid #4ca986;
 
@@ -283,6 +338,72 @@
 
       & > div:nth-child(2) {
         display: block;
+      }
+    }
+  }
+
+  @media only screen and (max-width: $mobile-max-width) {
+    height: auto;
+    margin-top: 0px;
+    padding-top: 50px;
+    padding-bottom: 60px;
+
+    & > div {
+      & > p {
+        width: 100%;
+      }
+
+      & > div {
+        padding: 0;
+        margin: 0;
+        
+        & > ul {
+          width: 100%;
+          height: auto;
+          margin: 0 auto 80px;
+          flex-direction: row;
+          border-top: solid 1px #ccd3db;
+          border-left: none;
+
+          li {
+            margin-top: -1px;
+            width: 25%;
+            padding: 0;
+            text-align: center;
+            border-top: 2px solid transparent;
+          }
+
+          .active {
+            font-size: 16px;
+            border-top: 2px solid #4ca986;
+            border-left: none;
+          }
+        }
+
+        & > div {
+          width: 100%;
+          height: auto;
+
+          & > .top {
+            width: 90%;
+            height: auto;
+            margin: 0 auto;
+            padding: 18px 16px;
+          }
+  
+          & > ul {
+            width: 90%;
+            margin: 4px auto 30px;
+
+            li {
+              margin-left: 16px;
+            }
+          }
+  
+          & > img {
+            display: none;
+          }
+        }
       }
     }
   }
@@ -434,6 +555,92 @@
       }
     }
   }
+
+  @media only screen and (max-width: $mobile-max-width) {
+    height: auto;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-top: 50px;
+    padding-bottom: 40px;
+    background-image: none;
+    background-image: linear-gradient(to right, #229875 -32%, #0d4b5b 109%);
+
+    & > .bg-1 {
+      display: none;
+    }
+  
+    & > .bg-2 {
+      display: none;
+    }
+
+    & > div {
+      & > div {
+        width: 100%;
+
+        & > p {
+          height: auto;
+          text-align: center;
+        }
+
+        ul {
+          margin-top: 20px;
+        }
+
+        ul > li {
+          display: flex;
+
+          img {
+            width: 41px;
+            height: 41px;
+          }
+
+          div {
+            width: auto;
+          }
+        }
+      }
+
+      & > ul {
+        position: relative;
+        top: 0;
+        left: 0;
+        width: 100%;
+
+        li {
+          width: 100%;
+          height: auto;
+          padding-bottom: 20px;
+
+          .middle-line {
+            display: none;
+          }
+
+          .img-span-div {
+            display: flex;
+            margin-right: 30px;
+
+            span {
+              height: auto;
+            }
+          }
+
+          div > p {
+            width: auto;
+            margin-right: 30px;
+          }
+
+          span, a {
+            position: relative;
+            top: 0px;
+            left: 0px;
+            margin-left: 30px;
+            margin-top: 10px;
+          }
+        }
+      }
+    }
+    
+  }
 }
 
 .section-5 {
@@ -553,10 +760,89 @@
           img {
             position: relative;
             width: 790px;
-            height: 878px;
-            object-fit: contain;
-            -webkit-animation: scrollUp 30s linear infinite;
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-image: url("/images/home/applications.png");
             animation: scrollUp 30s linear infinite;
+          }
+        }
+      }
+    }
+  }
+
+  @media only screen and (max-width: $mobile-max-width) {
+    height: auto;
+    padding-top: 66px;
+
+    & > div {
+
+      & > div {
+        margin-top: 30px;
+
+        .front-div {
+          width: 100%;
+
+          p {
+            width: 100%;
+          }
+
+          ul {
+            display: flex;
+            flex-wrap: wrap ;
+            justify-content: space-between;
+            li {
+              width: 30%;
+              margin-bottom: 0;
+
+              img {
+                width: 100%;
+                height: auto;
+              }
+            }
+          }
+        }
+
+        .back-div {
+          width: 100%;
+          margin-top: 30px;
+          margin-left: 0;
+
+          .group {
+            height: auto;
+            padding: 20px 14px;
+
+            p {
+              display: block;
+              margin-bottom: 12px;
+              text-align: center;
+            }
+
+            ul {
+              display: block;
+              margin-left: 0;
+              display: flex;
+              flex-wrap: wrap ;
+              justify-content: space-between;
+
+              li {
+                box-sizing: border-box;
+                width: 48%;
+                height: auto;
+                margin-top: 8px;
+                margin-left: 0;
+                padding: 0px;
+                text-align: center;
+              }
+            }
+          }
+
+          .image {
+            padding: 10px;
+            height: 300px;
+            img {
+              width: 100%;
+              animation: scrollUp 60s linear infinite;
+            }
           }
         }
       }
@@ -566,13 +852,11 @@
 
  @keyframes scrollUp {
   0% {
-    -webkit-transform: translateY(0);
     transform: translateY(0);
   }
 
   100% {
-    -webkit-transform: translateY(-878px);
-    transform: translateY(-878px);
+    transform: translateY(-100%);
   }
 }
 
@@ -609,7 +893,6 @@
     & > p {
       width: 965px;
       margin: 12px auto;
-      white-space: pre;
     }
 
     ul {
@@ -645,7 +928,6 @@
     }
 
     & > .link-div {
-      height: 24px;
       margin-top: 14px;
       font-size: 16px;
       font-weight: 500;
@@ -682,13 +964,11 @@
       }
 
       .p1 {
-        height: 24px;
         font-size: 20px;
         color: #30313b;
       }
 
       .p2 {
-        height: 32px;
         margin-top: 4px;
         opacity: 0.8;
         font-size: 16px;
@@ -710,8 +990,62 @@
       object-fit: contain;
     }
   }
+
+  @media only screen and (max-width: $mobile-max-width) {
+    height: auto;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-top: 50px;
+    padding-bottom: 40px;
+    background-image: none;
+    overflow: hidden;
+
+    .bg-1 {
+      display: none;
+    }
+  
+    .bg-2 {
+      display: none;
+    }
+
+    & > div {
+      & > p {
+        width: 100%;
+      }
+
+      & > ul {
+        margin-top: 20px;
+        margin-bottom: 40px;
+
+        img {
+          width: 160px;
+          height: 76px;
+        }
+      }
+
+      & > .join-div {
+        height: auto;
+        padding: 25px 17px 129px;
+
+        img {
+          height: 140px;
+          right: 10px;
+        }
+      }
+
+      .bottom-img {
+        margin-top: 30px;
+        width: 100%;
+        height: auto;
+      }
+    }
+  }
 }
 
 footer {
   background: #ffffff;
+
+  @media only screen and (max-width: $mobile-max-width) {
+    background-color: #f5f8f9;
+  }
 }
