--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -3,3 +3,4 @@ $font-family: 'PingFang SC', 'Lantinghei SC', 'Helvetica Neue', Helvetica, Arial
   'WenQuanYi Zen Hei', 'WenQuanYi Micro Hei', sans-serif;
 $font-family-1: Roboto, $font-family;
 $font-family-2: Proxima Nova, $font-family;
+$mobile-max-width: 768px;
