--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <footer>
     {{ $data := index .Site.Data .Site.Language.Lang }}
     <div class="footer">
-        <div class="footer-main">
+        <div class="footer-main common-layout">
             <div class="up-main">
                 <div class="left-div">
                     <img src="{{ .Site.Params.logo | absURL }}" alt="{{ .Site.Title }}" class="foot-logo">
