--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -9,5 +9,6 @@
     {{- partial "css.html" . -}}
 
     <script src="{{ "js/jquery-3.5.0.min.js" | relURL }}"></script>
+    <script src='{{ "js/jquery.modal.min.js" | relURL }}'></script>
 
 </head>
